--- a/client/stylesheets/codefolio.css
+++ b/client/stylesheets/codefolio.css
@@ -236,6 +236,7 @@ bt {
 	opacity: 0.5;
 }
 
+/*Custom CSS for Roopkund */
 /* glyphicon Configuration */
 
 .glyphicon {
@@ -251,7 +252,7 @@ bt {
     float: left;
     margin: 0 10px;
 }
-/*Custom CSS for Roopkund */
+
 .panel-detail {
   float: right;
   margin-right: 10px;
@@ -305,36 +306,20 @@ input[type="text"]:focus,search_glow{
 }
 
 .glyphicon-menu-left,.glyphicon-menu-right{
-  font-size: 1.5em;
+  font-size: 2.3em;
 	color: #1abc9c;
-  margin-left: 0px;
 }
 .chosenDate{
-  display:inline;
-  margin-right: 5px;
+  display:inline-block;
   text-align: justify;
-  font-size: 1.5em;
+  font-size: 1.2em;
 }
 
-.create-one{
-  margin-right: -15px;
-}
-
-.span-calendar{
-  margin:0px;
-  padding:0px;
-  display: inline;
-}
 .cal_spinner{
   background-color: #fff;
-  border:0px;
-  padding:0px;
   display:inline;
+  border:0;
+  padding:0;
+  cursor:pointer;
   color:#1abc9c;
-}
-
-.bootstrap-datetimepicker-widget table td.active, .bootstrap-datetimepicker-widget table td.active:hover{
-  background-color: #1abc9c;
-  color: #ffffff;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
