--- a/client/templates/admin/clients/list_clients.html
+++ b/client/templates/admin/clients/list_clients.html
@@ -1,7 +1,7 @@
 <template name="list_clients">
 
   <div class="container pt">
-    <div class="row">
+    <!-- <div class="row">
       <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="input-group">
           {{> esInput index="clients" placeholder="Search Clients..." class="form-control search_text" event="enter" allDocsOnEmpty=true}}
@@ -10,7 +10,7 @@
           </span>
         </div>
       </div>
-    </div>
+    </div> -->
       <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12">
               <h3>Your Clients</h3>
@@ -26,7 +26,7 @@
 
   <div class="container pt">
     <div class="row">
-        {{#esEach index="clients"}}
+        {{#each clients}}
         <div class="col-lg-6 col-md-6 col-sm-12">
           <div class="panel panel-default client-card">
               <div class="panel-heading">
@@ -73,10 +73,10 @@
             </div> <!-- panel footer -->
           </div> <!-- panel client-card -->
         </div><!-- col-lg-4 -->
-      {{/esEach}}
+      {{/each}}
     </div> <!-- row -->
 
-    <div class="search-controls">
+    <!-- <div class="search-controls">
       {{> esLoadMoreButton index="clients" howMany=20}}
     </div>
 
@@ -86,6 +86,6 @@
 
     {{#ifEsIsSearching index="clients"}}
       <div>Loading...</div>
-    {{/ifEsIsSearching}}
+    {{/ifEsIsSearching}} -->
   </div>
 </template>
