--- a/client/templates/admin/clients/edit_client.html
+++ b/client/templates/admin/clients/edit_client.html
@@ -15,6 +15,7 @@
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                     <a href="/admin/clients" class="btn btn-default">Go Back</a>
+                    {{filepickerIdToImageUrl myImageId h=200 w=200}}
             </div>
         </div>
     </div>
