--- a/client/templates/admin/clients/list_clients.html
+++ b/client/templates/admin/clients/list_clients.html
@@ -47,7 +47,7 @@
                     <span class="hidden-xs hidden-sm hidden-md small">Schedule</span>
                   </a>
 
-                  <a href="/admin/events/add" id="add_event"
+                  <a href="#" id="attach_doc"
                   class="btn btn-default btn-tiny footer-icons ">
                     <i class="glyphicon glyphicon-paperclip"></i>
                     <span class="hidden-xs hidden-sm hidden-md small">Attach</span>
