--- a/client/templates/admin/clients/list_clients.html
+++ b/client/templates/admin/clients/list_clients.html
@@ -21,6 +21,11 @@
           <div class="panel panel-default client-card">
               <div class="panel-heading">
                   <h3 class="panel-title client-card-header">{{name}}</h3>
+                  <a href="#" id="view_timeline"
+                  class="btn btn-default btn-tiny btn-circle footer-icons pull-right">
+                    <i class="fa fa-lg fa-history"></i>
+                    <!-- <span class="hidden-xs hidden-sm hidden-md small">History</span> -->
+                  </a>
                 </div> <!-- panel-heading -->
               <a href="/admin/clients/{{_id}}/edit" class="card-hover">
                 <div class="panel-body">
