--- a/client/templates/admin/clients/list_clients.html
+++ b/client/templates/admin/clients/list_clients.html
@@ -18,12 +18,12 @@
     <div class="row">
         {{#each clients}}
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <div class="panel panel-default client-card">
+          <div class="panel panel-default client-card box-shadow--3dp">
               <div class="panel-heading">
                   <h3 class="panel-title client-card-header">{{name}}</h3>
-                  <a href="#" id="view_timeline"
+                  <a href="/admin/clients/timeline" id="view_timeline"
                   class="btn btn-default btn-tiny btn-circle footer-icons pull-right">
-                    <i class="fa fa-lg fa-history"></i>
+                    <i class="fa fa-2x fa-history"></i>
                     <!-- <span class="hidden-xs hidden-sm hidden-md small">History</span> -->
                   </a>
                 </div> <!-- panel-heading -->
