--- a/client/stylesheets/codefolio.css
+++ b/client/stylesheets/codefolio.css
@@ -263,7 +263,7 @@ bt {
 }
 
 .client-card{
-  border-color: #1abc9c;
+  /*border-color: #1abc9c;*/
   color:#3E3d35;
 }
 
@@ -363,5 +363,64 @@ input[type="text"]:focus,search_glow{
   font-size: 12px;
   line-height: 1.428571429;
   border-radius: 15px;
-  
+  border-color:#1abc9c;
 }
+/*Timeline CSS Begins here*/
+.timeline-badge{
+  width: 35px;
+  height: 35px;
+  text-align: center;
+  font-size: 12px;
+  border-radius: 35px;
+  border-color:#1abc9c;
+  z-index:100;
+  float:left;
+  margin-left: -12px;
+  margin-top: 25px;
+  background-color:#1abc9c;
+}
+
+.timeline-badge::after{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 14px;
+  height: 100%;
+  width: 3px;
+  background: #1abc9c;
+  z-index:106;
+}
+.inner-badge{
+  color:#fff;
+  position:relative;
+  margin-top: 30%;
+  z-index:177;
+}
+
+.timeline-panel{
+  height:33%;
+}
+
+
+/*Timeline CSS Ends here*/
+
+/* Shadow Classes for the cards here */
+.box-shadow--2dp {
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12)
+}
+.box-shadow--3dp {
+    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, .14), 0 3px 3px -2px rgba(0, 0, 0, .2), 0 1px 8px 0 rgba(0, 0, 0, .12)
+}
+.box-shadow--4dp {
+    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12), 0 2px 4px -1px rgba(0, 0, 0, .2)
+}
+.box-shadow--6dp {
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12), 0 3px 5px -1px rgba(0, 0, 0, .2)
+}
+.box-shadow--8dp {
+    box-shadow: 0 8px 10px 1px rgba(0, 0, 0, .14), 0 3px 14px 2px rgba(0, 0, 0, .12), 0 5px 5px -3px rgba(0, 0, 0, .2)
+}
+.box-shadow--16dp {
+    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, .14), 0 6px 30px 5px rgba(0, 0, 0, .12), 0 8px 10px -5px rgba(0, 0, 0, .2)
+}
+/* Shadow Classed End here */
