--- a/client/templates/admin/events/list_events.html
+++ b/client/templates/admin/events/list_events.html
@@ -55,7 +55,7 @@
            <div class="col-lg-12 col-md-10 col-sm-4">
 
 
-             <div class="panel panel-default">
+             <div class="panel panel-default box-shadow--3dp">
                  <div class="panel-heading">
                    <h3 class="panel-title">{{name}}</h3>
                  </div>
