--- a/client/templates/admin/clients/list_clients.html
+++ b/client/templates/admin/clients/list_clients.html
@@ -23,7 +23,8 @@
                   <h3 class="panel-title client-card-header">{{name}}</h3>
                   <a href="/admin/clients/timeline" id="view_timeline"
                   class="btn btn-default btn-tiny btn-circle footer-icons pull-right">
-                    <i class="fa fa-2x fa-history"></i>
+                    <!-- <i class="fa fa-1x fa-history timeline-font"></i> -->
+                    <i class="fa fa-h-square timeline-font"></i>
                     <!-- <span class="hidden-xs hidden-sm hidden-md small">History</span> -->
                   </a>
                 </div> <!-- panel-heading -->
