--- a/client/templates/admin/clients/timeline.html
+++ b/client/templates/admin/clients/timeline.html
@@ -10,7 +10,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
           <div class="timeline-badge">
-              <i class="fa fa-picture-o inner-badge"></i>
+              <i class="glyphicon glyphicon-picture inner-badge"></i>
           </div>
           <div class="panel panel-default client-card timeline-panel box-shadow--4dp">
             <div class="panel-heading">
@@ -24,23 +24,7 @@
         <!--Next doc-->
         <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
           <div class="btn btn-large timeline-badge">
-              <i class="fa fa-file-o inner-badge"></i>
-              <p style="border-right:2px solid black"></p>
-          </div>
-          <div class="panel panel-default client-card box-shadow--16dp">
-            <div class="panel-heading">
-              <h4 class="panel-title client-card-header">10th October 2015</h4>
-            </div>
-            <div class="panel-body">
-              <p>Time line content is placed here...</p>
-            </div>
-          </div>
-        </div>
-        <!-- Next Doc-->
-        <!--Next doc-->
-        <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-          <div class="btn btn-large timeline-badge">
-              <i class="fa fa-video-camera inner-badge"></i>
+              <i class="glyphicon glyphicon-file inner-badge"></i>
               <p style="border-right:2px solid black"></p>
           </div>
           <div class="panel panel-default client-card box-shadow--4dp">
@@ -56,7 +40,40 @@
         <!--Next doc-->
         <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
           <div class="btn btn-large timeline-badge">
-              <i class="fa fa-music inner-badge"></i>
+              <i class="glyphicon glyphicon-facetime-video inner-badge"></i>
+              <p style="border-right:2px solid black"></p>
+          </div>
+          <div class="panel panel-default client-card box-shadow--4dp">
+            <div class="panel-heading">
+              <h4 class="panel-title client-card-header">10th October 2015</h4>
+            </div>
+            <div class="panel-body">
+              <p>Time line content is placed here...</p>
+            </div>
+          </div>
+        </div>
+        <!-- Next Doc-->
+        <!--Next doc-->
+        <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+          <div class="btn btn-large timeline-badge">
+              <i class="glyphicon glyphicon-music inner-badge"></i>
+              <p style="border-right:2px solid black"></p>
+          </div>
+          <div class="panel panel-default client-card box-shadow--4dp">
+            <div class="panel-heading">
+              <h4 class="panel-title client-card-header">10th October 2015</h4>
+            </div>
+            <div class="panel-body">
+              <p>Time line content is placed here...</p>
+            </div>
+          </div>
+        </div>
+        <!-- Next Doc-->
+
+        <!--Next doc-->
+        <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+          <div class="btn btn-large timeline-badge">
+              <i class="glyphicon glyphicon-globe inner-badge"></i>
               <p style="border-right:2px solid black"></p>
           </div>
           <div class="panel panel-default client-card box-shadow--4dp">
