--- a/client/templates/admin/clients/timeline.html
+++ b/client/templates/admin/clients/timeline.html
@@ -10,7 +10,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
           <div class="timeline-badge">
-              <i class="glyphicon glyphicon-picture inner-badge"></i>
+              <i class="fa fa-camera inner-badge"></i>
           </div>
           <div class="panel panel-default client-card timeline-panel box-shadow--4dp">
             <div class="panel-heading">
@@ -24,7 +24,7 @@
         <!--Next doc-->
         <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
           <div class="btn btn-large timeline-badge">
-              <i class="glyphicon glyphicon-file inner-badge"></i>
+              <i class="fa fa-file inner-badge"></i>
               <p style="border-right:2px solid black"></p>
           </div>
           <div class="panel panel-default client-card box-shadow--4dp">
@@ -40,7 +40,7 @@
         <!--Next doc-->
         <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
           <div class="btn btn-large timeline-badge">
-              <i class="glyphicon glyphicon-facetime-video inner-badge"></i>
+              <i class="fa fa-video-camera inner-badge"></i>
               <p style="border-right:2px solid black"></p>
           </div>
           <div class="panel panel-default client-card box-shadow--4dp">
@@ -56,7 +56,7 @@
         <!--Next doc-->
         <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
           <div class="btn btn-large timeline-badge">
-              <i class="glyphicon glyphicon-music inner-badge"></i>
+              <i class="fa fa-music inner-badge"></i>
               <p style="border-right:2px solid black"></p>
           </div>
           <div class="panel panel-default client-card box-shadow--4dp">
@@ -73,7 +73,7 @@
         <!--Next doc-->
         <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
           <div class="btn btn-large timeline-badge">
-              <i class="glyphicon glyphicon-globe inner-badge"></i>
+              <i class="fa fa-link inner-badge"></i>
               <p style="border-right:2px solid black"></p>
           </div>
           <div class="panel panel-default client-card box-shadow--4dp">
