--- a/client/templates/admin/clients/timeline.html
+++ b/client/templates/admin/clients/timeline.html
@@ -6,86 +6,25 @@
         </div>
       </div>
     </div>
+
     <div class="container pt">
       <div class="row">
-        <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+        {{#each getClientDocuments}}
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 col-lg-offset-3 col-md-offset-3">
           <div class="timeline-badge">
               <i class="fa fa-camera inner-badge"></i>
           </div>
           <div class="panel panel-default client-card timeline-panel box-shadow--4dp">
             <div class="panel-heading">
-              <h4 class="panel-title client-card-header">10th October 2015</h4>
+              <h4 class="panel-title client-card-header">{{formatDateTime updatedAt}}</h4>
             </div>
             <div class="panel-body">
-              <p>Time line content is placed here...</p>
+              <p><img class="timeline-image" src={{imageURL}} width="100" height="100"/></p>
             </div>
           </div>
         </div>
-        <!--Next doc-->
-        <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-          <div class="btn btn-large timeline-badge">
-              <i class="fa fa-file inner-badge"></i>
-              <p style="border-right:2px solid black"></p>
-          </div>
-          <div class="panel panel-default client-card box-shadow--4dp">
-            <div class="panel-heading">
-              <h4 class="panel-title client-card-header">10th October 2015</h4>
-            </div>
-            <div class="panel-body">
-              <p>Time line content is placed here...</p>
-            </div>
-          </div>
-        </div>
-        <!-- Next Doc-->
-        <!--Next doc-->
-        <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-          <div class="btn btn-large timeline-badge">
-              <i class="fa fa-video-camera inner-badge"></i>
-              <p style="border-right:2px solid black"></p>
-          </div>
-          <div class="panel panel-default client-card box-shadow--4dp">
-            <div class="panel-heading">
-              <h4 class="panel-title client-card-header">10th October 2015</h4>
-            </div>
-            <div class="panel-body">
-              <p>Time line content is placed here...</p>
-            </div>
-          </div>
-        </div>
-        <!-- Next Doc-->
-        <!--Next doc-->
-        <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-          <div class="btn btn-large timeline-badge">
-              <i class="fa fa-music inner-badge"></i>
-              <p style="border-right:2px solid black"></p>
-          </div>
-          <div class="panel panel-default client-card box-shadow--4dp">
-            <div class="panel-heading">
-              <h4 class="panel-title client-card-header">10th October 2015</h4>
-            </div>
-            <div class="panel-body">
-              <p>Time line content is placed here...</p>
-            </div>
-          </div>
-        </div>
-        <!-- Next Doc-->
-
-        <!--Next doc-->
-        <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-          <div class="btn btn-large timeline-badge">
-              <i class="fa fa-link inner-badge"></i>
-              <p style="border-right:2px solid black"></p>
-          </div>
-          <div class="panel panel-default client-card box-shadow--4dp">
-            <div class="panel-heading">
-              <h4 class="panel-title client-card-header">10th October 2015</h4>
-            </div>
-            <div class="panel-body">
-              <p>Time line content is placed here...</p>
-            </div>
-          </div>
-        </div>
-        <!-- Next Doc-->
+        {{/each}}
       </div>
     </div>
+
 </template>
