--- a/client/templates/admin/clients/timeline.html
+++ b/client/templates/admin/clients/timeline.html
@@ -1,4 +1,5 @@
 <template name="timeline">
+  {{> imageModal}}
   <div class="container pt">
     <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
