Message Start commit

--- a/client/templates/admin/clients/list_clients.html
+++ b/client/templates/admin/clients/list_clients.html
@@ -1,5 +1,5 @@
 <template name="list_clients">
-
+  {{> smsModal}}
   <div class="container pt">
       <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12">
@@ -55,7 +55,7 @@
                     <span class="hidden-xs hidden-sm hidden-md small">Call</span>
                   </a>
 
-                  <a href="/admin/events/add" id="add_event"
+                  <a href="#" id="sms_message"
                   class="btn btn-default btn-tiny footer-icons ">
                     <i class="glyphicon glyphicon-comment"></i>
                     <span class="hidden-xs hidden-sm hidden-md small">Message</span>
